tests/ui/invalid_type_wch.rs
use wchar::wch;

const INVALID_TYPE: &[f32] = wch!(f32, "oops");

fn main() {}
